--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       <title>React App</title>
       <meta name="description" content="Web site created using create-react-app" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-      <link rel="shortcut icon" href="/src/img/favicon.ico" type="image/x-icon">
+      <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     </head>
     <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
